updated for lab1

--- a/boilerplate/css/style.css
+++ b/boilerplate/css/style.css
@@ -33,3 +33,36 @@
 #reverse {
     float: left;
 }
+
+.sequence-control-container {
+    width: 350px;
+    height: 30px;
+    background-color: rgba(255,255,255,0.8);
+    padding: 10px;
+    line-height: 45px;
+    text-align: center;
+    border: solid gray 1px;
+}
+
+.range-slider {
+    width: 250px;
+}
+
+.step {
+    width: 40px; 
+}
+
+.step img {
+    width: 100%;
+    height: auto;
+}
+
+.legend-control-container {
+    width: 200px;
+    height: 30px;
+    background-color: rgba(255,255,255,0.8);
+    padding: 10px;
+    line-height: 45px;
+    text-align: center;
+    border: solid gray 1px;
+}
